# pynvml

./: CMakeLists.txt  LICENSE  README.md  setup.py
src/: main.cpp
tests/: test.py
